# SetSync

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.mail  MONETIZACAO.md  README.md  TESTE_MP.md  account_deletion.py  admin_notifications.py  admin_outreach.py  ads.txt  adsense.py  agenda_maps.py  agenda_reminders.py  agenda_util.py  app.py  auth_emails.py  band_finance.py  band_finance_pdf.py  band_invites.py  band_logos.py  band_member_invites.py  band_notifications.py  chordpro.py  chordsheet_bridge.py  cifra_referencia.py  cifra_user_draft.py  config.py  content_seed.py  database.py  db.py  docker-compose.postgres.yml  docker-compose.prod.yml  docker-compose.yml  email_config.py  email_service.py  event_calendar.py  event_fees.py  (+61 more)
backups/: banda.db.20260527-205315.bak  data.20260527-205400.tgz
blueprints/: admin.py  agenda.py  ajuda.py  assinatura.py  auth.py  bands.py  blog.py  cifras.py  cifras_import.py  convites.py  guia.py  legal.py  mail_web.py  music_api.py  notifications.py  realtime.py  roadmap.py  setlists.py  studios.py  whatsapp_admin.py
chord_diagram/: __init__.py  api_service.py  bass_arpeggio_bank.py  bass_arpeggio_pdf.py  bass_arpeggio_transpose.py  cache.py  chords_db.py  fretboard.py  instruments.py  piano.py  real_shapes.py  render_svg.py  scales.py  scales_db.py  service.py  vexflow_export.py  voicing.py
chordsheet/: __init__.py  chord_token.py  examples.py  export.py  format_chord.py  nashville.py  notation_style.py  parser.py  prefs.py  private_notes.py  render.py  smufl_chord.py  test_meta.py  transpose.py
(+341 files in other folders)
