[project]
name = "banda-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.7.2",
    "bs4>=0.0.2",
    "curl-cffi>=0.15.0",
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-mail>=0.10.0",
    "librosa>=0.11.0",
    "playwright>=1.60.0",
    "pychord>=1.4.0",
    "requests>=2.33.1",
    "soundfile>=0.13.1",
    "yt-dlp>=2026.3.17",
]
